Added API, login, logout, updated models and authentication

--- a/WebApp/intime/requirements.txt
+++ b/WebApp/intime/requirements.txt
@@ -1,3 +1,11 @@
 Django==1.6.2
 South==0.8.4
+django-tastypie==0.11.0
+httplib2==0.8
+python-dateutil==2.2
+python-mimeparse==0.1.4
+sendgrid==0.2.6
+six==1.5.2
+smtpapi==0.1.1
+twilio==3.6.5
 wsgiref==0.1.2
